examples/errors/parsing/arithmetic-missing-equals.cn
main : () [impure] =
  let x  (1 + 2) * 3;
  ()
